--- a/src/pages/ChatRecordPage/ChatRecordPage.scss
+++ b/src/pages/ChatRecordPage/ChatRecordPage.scss
@@ -3,6 +3,7 @@
 .chat_record_page .word_list {
   font-family: LittleMatch;
   width: 290PX;
+  //margin: 0 auto; //水平居中
 }
 
 .chat_record_page .word_item {
@@ -20,6 +21,14 @@
   white-space: pre-wrap;
   border: 2PX #333333 solid;
   border-radius: 6PX;
+}
+
+.chat_record_page .name {
+  position: relative;
+  top: 8px;
+  padding-left: 40px;
+  font-size: 10px;
+  line-height: 0;
 }
 
 .border_none {
@@ -70,10 +79,27 @@
   font-size: 15PX;
 }
 
+.japanese_words {
+  font-family: 'umeboshi_' !important;
+}
 
+.japanese_words .words {
+  padding: 5px !important;
+  font-size: 13px !important;
+}
 
 
 @font-face {
   font-family: 'LittleMatch';
   src: url('../../resources/fonts/LittleMatch.ttf');
+}
+
+@font-face {
+  font-family: 'umeboshi_';
+  src: url('../../resources/fonts/umeboshi_.ttf');
+}
+
+@font-face {
+  font-family: 'SetoFont-1';
+  src: url('../../resources/fonts/SetoFont-1.ttf');
 }
